0.5.1 Fix menu overflowing on smaller screens.

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -6,7 +6,7 @@
 
 @layer base {
     body {
-        @apply overflow-hidden font-display bg-slate-950 text-yellow-50
+        @apply font-display bg-slate-950 text-yellow-50
     }
 
     button {
@@ -29,7 +29,7 @@
     }
 
     .floating-label {
-        @apply pointer-events-none select-none absolute ml-5 left-0 top-1/2 -translate-y-1/2 transition-all duration-200 font-semibold cursor-text bg-slate-900 text-slate-500 peer-focus:top-0 peer-focus:px-2 peer-focus:ml-2 peer-focus:text-base peer-focus:text-yellow-50 peer-valid:top-0 peer-valid:ml-2 peer-valid:px-2 peer-valid:text-base
+        @apply pointer-events-none select-none absolute ml-5 left-0 top-1/2 -translate-y-1/2 transition-all duration-200 font-semibold cursor-text bg-slate-900 text-slate-500 peer-focus:top-0 peer-focus:px-2 peer-focus:ml-2 peer-focus:text-sm md:peer-focus:text-base peer-focus:text-yellow-50 peer-valid:top-0 peer-valid:ml-2 peer-valid:px-2 peer-valid:text-sm md:peer-valid:text-base
     }
 
     .scrollbar::-webkit-scrollbar {
